# ffcc

./: .gitignore  README.md  fast.ll  flake.nix  pyproject.toml  sanity.ir  synth.ir  test.ir  test2.ir  vec.ll
.github/workflows/: pythonpublish.yml
bench/: silu.py
ffcc/: __init__.py  __main__.py  cse.py  diff.py  eval.py  helper.py  ir.py  jit.py  main.py  newton.py  opt_main.py  parse.py  platform.py  plot.py  print.py  print_llvm.py  print_torch.py  printer.py  solver.py  synth.py  tune.py
ffcc/opt/: __init__.py  approximate.py  optimize_types.py  rewriter.py  simplify.py
ffcc/rewrite/: approximate.py  instantiate.py  optimize_types.py  rewriter.py  simplify.py
synth/: __main__.py  cse.py  ir.py  main.py  parse.py  printer.py
synth/rewrite/: approximate.py  rewriter.py  simplify.py
test/filecheck/: constantfold.ir  lit.cfg  log_ident.ir  neutral_elms.ir  simplify.ir
tests/filecheck/: lit.cfg
tests/filecheck/diff/: basic_diff.py  simp.py
tests/filecheck/ffcc/: silu.ir
tests/filecheck/ir/: constantfold.ir  expf.ir  gaussian.ir  log_ident.ir  neutral_elms.ir  qsqrt.ir  sigmoid.ir  silu.ir  simplify.ir  softplus.ir  tanh.ir  tanh1.ir  tanh2.ir
tests/filecheck/jit/: linspace.py  silu.py  simple_jit.py  test.py  vectorize.py
tests/filecheck/parser/: expressions.py
