[project]
name = "ffcc"
version = "0.1.0"
description = "Compiler for fast floating-point approximations"
readme = "README.md"
authors = [{name = "Anton Lydike", email="me@antonlydike.de"}]
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "z3-solver>=4.15.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "filecheck>=1.0.2",
    "lit>=18.1.8",
]
jit = [
    "numpy>=2.2.5",
]
plot = [
    "matplotlib>=3.10.3",
    "pyqt5>=5.15.11",
]

[project.scripts]
ffcc = "ffcc.main:main"
ffcc-plot = "ffcc.plot:plot_main"

[tool.uv]
package = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
ffcc = ["py.typed"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
