[project]
name = "ffcc"
version = "0.1.3"
description = "Compiler for fast floating-point approximations"
readme = "README.md"
authors = [{name = "Anton Lydike", email="me@antonlydike.de"}]
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "al-aalib>=0.1.1",
    "torch>=2.12.1",
    "numpy>=2.2.5",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "filecheck>=1.0.2",
    "lit>=18.1.8",
]
plot = [
    "matplotlib>=3.10.3",
    "pyqt5>=5.15.11",
]

[project.scripts]
ffcc-opt = "ffcc.opt_main:main"
ffcc-plot = "ffcc.plot:plot_main"
ffcc = "ffcc.main:main"

[tool.uv]
package = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
ffcc = ["py.typed"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "objgraph>=3.6.2",
    "psutil>=7.2.2",
]
